--- a/_website/index.html
+++ b/_website/index.html
@@ -90,7 +90,7 @@
         <div class="sphinxsidebarwrapper">
 <p class="logo">
   <a href="#">
-    <img class="logo" src="_static/logo/bjj.jpeg" alt="Logo"/>
+    <img class="logo" src="_static/logo/bjj-bw copy.jpeg" alt="Logo"/>
     
   </a>
 </p>
